--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@
         }
 
         .indent2 {
-            text-indent: 2em;
+            margin-left: 9em;
             margin-top: 0;
             margin-bottom: 0;
             text-align: left;
